syntax = "proto3";

package meteora.dllm.v1;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes signature = 1;
  bytes fee_payer = 2;
  repeated bytes signers = 3;
  uint64 fee = 4;
  uint64 compute_units_consumed = 5;
  repeated Instruction instructions = 6;
}

message Instruction {
  bytes program_id = 1;
  uint32 stack_height = 2;
  oneof instruction {
    SwapInstruction swap_instruction = 10;
    SwapEvent swap_event = 11;
  }
}

message SwapEvent {
  bytes lb_pair = 1;
  bytes from = 2;
  int32 start_bin_id = 3;
  int32 end_bin_id = 4;
  uint64 amount_in = 5;
  uint64 amount_out = 6;
  bool swap_for_y = 7;
  uint64 fee = 8;
  uint64 protocol_fee = 9;
  string fee_bps = 10; // u128 representing fee in basis points
  uint64 host_fee = 11;
}

message SwapInstruction {
  SwapAccounts accounts = 1;
  uint64 amount_in = 2;
  uint64 min_amount_out = 3;
}

message SwapAccounts {
  bytes lb_pair = 1;
  bytes bin_array_bitmap_extension = 2;
  bytes reserve_x = 3;
  bytes reserve_y = 4;
  bytes user_token_in = 5;
  bytes user_token_out = 6;
  bytes token_x_mint = 7;
  bytes token_y_mint = 8;
  bytes oracle = 9;
  bytes host_fee_in = 10;
  bytes user = 11;
  bytes token_x_program = 12;
  bytes token_y_program = 13;
  bytes event_authority = 14;
  bytes program = 15;
}
